# SI-KAP-UI

./: .gitignore  diff_kehadiran.txt  package-lock.json
.github/workflows/: deployment.yml
.trae/documents/: Integrasi Upload Lampiran Tugas (Mentor & Siswa).md
sikap/: .env.example  AUDIT.md  build-output.txt  check_log.txt  components.json  config_full_error.txt  drizzle.config.ts  eslint.config.js  lint-output.txt  lint_log.txt  lint_report.json  next.config.js  package-lock.json  package.json  tsc_final.txt  tsc_page_error.txt
sikap-file-storage/: .gitignore  Cargo.toml  Dockerfile
sikap-file-storage/.github/workflows/: deploy.yml
sikap-file-storage/docs/: openapi.json  openapi.yaml
sikap-file-storage/src/: config.rs  lib.rs  main.rs
sikap-file-storage/src/handlers/: delete.rs  mod.rs  upload.rs
sikap-file-storage/src/utils/: auth.rs  mod.rs
sikap-file-storage/tests/: storage_tests.rs
sikap-old/: package-lock.json
sikap-old/app/: layout.tsx  page.tsx
sikap-old/components/: action-buttons.tsx  admin-dashboard.tsx  data-table.tsx  form-section.tsx  index.ts  page-header.tsx  score-display.tsx  sidebar.tsx  stat-card.tsx  status-badge.tsx  student-dashboard.tsx
sikap-old/hooks/: use-evaluations.ts  use-mentors.ts  use-reports.ts
sikap-old/lib/: auth-context.tsx  data-store.ts  mock-data.ts  types.ts
sikap/.docs/: mentor-dashboard-api.md  mentor-integration.md  mentor-students-integration.md  mentor-tasks-integration.md
sikap/app/: layout.tsx
sikap/components/: admin-dashboard.tsx  empty-state.tsx  loading-spinner.tsx  mentor-dashboard.tsx  (+2 more)
(+223 files in other folders)
