[package]
name = "sikap-file-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

# Middleware (CORS, FS, Trace)
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.7", features = ["cors", "fs", "trace", "limit"] }

# Utils
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3"
